chore: fix align

--- a/src/styles/calendar.header.css
+++ b/src/styles/calendar.header.css
@@ -372,7 +372,7 @@
   margin: 0;
   font-family: inherit;
   color: inherit;
-  text-align: inherit;
+  text-align: center;
   cursor: pointer;
   text-transform: inherit;
   letter-spacing: inherit;
